Dodanie zdjęć baneru i ukończenie sekcji header

--- a/index.html
+++ b/index.html
@@ -10,9 +10,21 @@
 <body>
     <header>
         <div class="header-banner">
-            <div class="header-banner__sky"></div>
+            <div class="header-banner__sky">
+                <h1> Piłka nożna - moja pasja <i class="fa-solid fa-futbol"></i> </h1>
+            </div>
             <div class="header-banner__field"></div>
+            <div class="header-banner__goal"></div>
+            <div class="header-banner__dot"></div>
+            <i class="fa-solid fa-futbol ball"></i>
         </div>
+        <nav class="header-nav">
+            <ul class="nav-menu">
+                <a href="" class="nav-menu__item"><li>Start</li></a>
+                <a href="" class="nav-menu__item"><li>Historia</li></a>
+                <a href="" class="nav-menu__item"><li>O mnie</li></a>
+            </ul>
+        </nav>
     </header>
     <main>
 
@@ -23,6 +35,7 @@
     <footer>
 
     </footer>
+    <script src="https://kit.fontawesome.com/e4fbfcee05.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
