--- a/index.html
+++ b/index.html
@@ -20,13 +20,68 @@
         </div>
         <nav class="header-nav">
             <ul class="nav-menu">
-                <a href="" class="nav-menu__item"><li>Start</li></a>
-                <a href="" class="nav-menu__item"><li>Historia</li></a>
-                <a href="" class="nav-menu__item"><li>O mnie</li></a>
+                <a href="" class="nav-menu__item"><li>Jak to się zaczęło</li></a>
+                <a href="" class="nav-menu__item"><li>Mój klub</li></a>
+                <a href="" class="nav-menu__item"><li>Osiągnięcia</li></a>
             </ul>
         </nav>
     </header>
     <main>
+        <hr>
+        <section>
+            <div class="section-article">
+                <h1>Moje początki</h1>
+                <div class="section-article__text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum, nunc nec condimentum posuere, 
+                        velit leo suscipit felis, ac vehicula massa lacus eget tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Donec placerat, erat semper feugiat venenatis, dui orci tempus ligula, eleifend dictum sem leo eu felis. In vitae justo nec mi laoreet aliquet. Praesent vel tincidunt libero, in pellentesque mi. Nunc sagittis, arcu nec gravida 
+                        gravida, orci eros interdum justo, ac accumsan leo
+                        neque et elit. Mauris viverra rhoncus ligula eget
+                        molestie. Donec eu lobortis ligula. Aliquam in
+                        hendrerit mauris, a aliquet urna. Cras nunc 
+                        turpis, tincidunt sed ultricies ut, pharetra 
+                        ac leo. Nulla ac magna faucibus, pharetra lorem 
+                        id, tempus arcu. Donec laoreet, tellus ut 
+                        bibendum molestie, sem dui bibendum tortor, sed 
+                        eleifend nisi est sit amet lacus. Aenean eget
+                        metus arcu. Suspendisse potenti. Suspendisse 
+                        turpis mauris, bibendum eget mattis quis, 
+                        finibus vitae enim. Mauris vel mauris ut metus
+                        dapibus bibendum.
+                    </p>
+                </div>
+                <div class="section-article__images">
+                    <img src="pilka-stadion.jpg" alt="Piłka na stadionie">
+                </div>
+            </div>
+            <div class="section-article">
+                <h1>Moje początki</h1>
+                <div class="section-article__text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum, nunc nec condimentum posuere, 
+                        velit leo suscipit felis, ac vehicula massa lacus eget tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Donec placerat, erat semper feugiat venenatis, dui orci tempus ligula, eleifend dictum sem leo eu felis. In vitae justo nec mi laoreet aliquet. Praesent vel tincidunt libero, in pellentesque mi. Nunc sagittis, arcu nec gravida 
+                        gravida, orci eros interdum justo, ac accumsan leo
+                        neque et elit. Mauris viverra rhoncus ligula eget
+                        molestie. Donec eu lobortis ligula. Aliquam in
+                        hendrerit mauris, a aliquet urna. Cras nunc 
+                        turpis, tincidunt sed ultricies ut, pharetra 
+                        ac leo. Nulla ac magna faucibus, pharetra lorem 
+                        id, tempus arcu. Donec laoreet, tellus ut 
+                        bibendum molestie, sem dui bibendum tortor, sed 
+                        eleifend nisi est sit amet lacus. Aenean eget
+                        metus arcu. Suspendisse potenti. Suspendisse 
+                        turpis mauris, bibendum eget mattis quis, 
+                        finibus vitae enim. Mauris vel mauris ut metus
+                        dapibus bibendum.
+                    </p>
+                </div>
+                <div class="section-article__images">
+                    <img src="pilka-stadion.jpg" alt="Piłka na stadionie">
+                </div>
+            </div>
+        </section>
 
     </main>
     <aside>
