Modyfikacja pliku main i sekcji section-article, stworzenie footera

--- a/index.html
+++ b/index.html
@@ -56,7 +56,33 @@
                 </div>
             </div>
             <div class="section-article">
-                <h1>Moje początki</h1>
+                <h1>Nida Pińczów</h1>
+                <div class="section-article__text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum, nunc nec condimentum posuere, 
+                        velit leo suscipit felis, ac vehicula massa lacus eget tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Donec placerat, erat semper feugiat venenatis, dui orci tempus ligula, eleifend dictum sem leo eu felis. In vitae justo nec mi laoreet aliquet. Praesent vel tincidunt libero, in pellentesque mi. Nunc sagittis, arcu nec gravida 
+                        gravida, orci eros interdum justo, ac accumsan leo
+                        neque et elit. Mauris viverra rhoncus ligula eget
+                        molestie. Donec eu lobortis ligula. Aliquam in
+                        hendrerit mauris, a aliquet urna. Cras nunc 
+                        turpis, tincidunt sed ultricies ut, pharetra 
+                        ac leo. Nulla ac magna faucibus, pharetra lorem 
+                        id, tempus arcu. Donec laoreet, tellus ut 
+                        bibendum molestie, sem dui bibendum tortor, sed 
+                        eleifend nisi est sit amet lacus. Aenean eget
+                        metus arcu. Suspendisse potenti. Suspendisse 
+                        turpis mauris, bibendum eget mattis quis, 
+                        finibus vitae enim. Mauris vel mauris ut metus
+                        dapibus bibendum.
+                    </p>
+                </div>
+                <div class="section-article__images">
+                    <img src="pilka-stadion.jpg" alt="Piłka na stadionie">
+                </div>
+            </div>
+            <div class="section-article">
+                <h1>Wszystkie osiagnięcia</h1>
                 <div class="section-article__text">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum, nunc nec condimentum posuere, 
@@ -84,11 +110,23 @@
         </section>
 
     </main>
-    <aside>
-
-    </aside>
     <footer>
-
+        <div class="contact">
+            <h1> Kontakt </h1>
+            <ul>
+                <li> <span> Email:  </span> contact@email.com </li>
+                <li> <span> Telefon:  </span> 594 125 340</li>
+                <li> <span> Adres:  </span> Warszawa ul. Szkolna 4 53-124</li>
+            </ul>
+        </div>
+        <div class="social">
+            <h1> Social </h1>
+            <ul>
+                <li><a href="https://www.facebook.com/filip.blicharski.9/" target="_blank"> <i class="fa-brands fa-facebook fa-5x fa-beat" style="--fa-beat-scale: 1.2;"></i> </a></li>
+                <li><a href="https://www.instagram.com/filipblicharski/" target="_blank"> <i class="fa-brands fa-instagram fa-5x fa-beat" style="--fa-beat-scale: 1.2;"></i> </a></li>
+                <li><a href="https://github.com/filipbli" target="_blank"> <i class="fa-brands fa-github fa-5x fa-beat" style="--fa-beat-scale: 1.2;"></i> </a></li>
+            </ul>
+        </div>
     </footer>
     <script src="https://kit.fontawesome.com/e4fbfcee05.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
