Uzupelnienie article tekstem, dodanie zdjec

--- a/index.html
+++ b/index.html
@@ -33,22 +33,21 @@
                 <h1>Moje początki</h1>
                 <div class="section-article__text">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum, nunc nec condimentum posuere, 
-                        velit leo suscipit felis, ac vehicula massa lacus eget tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec placerat, erat semper feugiat venenatis, dui orci tempus ligula, eleifend dictum sem leo eu felis. In vitae justo nec mi laoreet aliquet. Praesent vel tincidunt libero, in pellentesque mi. Nunc sagittis, arcu nec gravida 
-                        gravida, orci eros interdum justo, ac accumsan leo
-                        neque et elit. Mauris viverra rhoncus ligula eget
-                        molestie. Donec eu lobortis ligula. Aliquam in
-                        hendrerit mauris, a aliquet urna. Cras nunc 
-                        turpis, tincidunt sed ultricies ut, pharetra 
-                        ac leo. Nulla ac magna faucibus, pharetra lorem 
-                        id, tempus arcu. Donec laoreet, tellus ut 
-                        bibendum molestie, sem dui bibendum tortor, sed 
-                        eleifend nisi est sit amet lacus. Aenean eget
-                        metus arcu. Suspendisse potenti. Suspendisse 
-                        turpis mauris, bibendum eget mattis quis, 
-                        finibus vitae enim. Mauris vel mauris ut metus
-                        dapibus bibendum.
+                        W moim życiu piłka nożna towarzyszyła mi od zawsze.
+                        Mój 7 lat starszy brat zapoczątkował we mnie tę pasję.
+                        Zawsze, gdy na dworze robiło się ciepło zabierał mnie na dwór
+                        pokopać piłkę. Często, gdy graliśmy on mnie ogrywał, a ja byłem 
+                        zdenerwowany, choć nigdy się nie poddawałem i grałem dalej.
+                        Moi koledzy też interesują się piłką nożną, gdy tylko zaczynały się
+                        wakacje, jeździliśmy na boisko postrzelać na bramkę. W szkole podstawowej 
+                        już 2 klasie jeździliśmy na turnieje i byliśmy w miarę dobrzy. Najczęściej 
+                        grałem na pozycji pomocnika. Turnieje były dla mnie bardzo ważne, dzień przed
+                        mocno się przygotywałem, a w dzień zawodów wstawałem wcześnie rano. 
+                        Bardzo mocno się stresowałem, byłem kapitanem drużyny i ponosiłem 
+                        ciężar porażki. Największym osiągnięciem było zakwalifikowanie się do Turnieju Świętokrzyskich 
+                        Półfinałów, w których graliśmy z drużynami z całego województwa. Pamiętam, że zabrakło nam
+                        naprawdę niewiele, aby przejść dalej, gdyż mieliśmy 8 punktów, a pierwsza drużyna 9.
+                        Dobrze wspominam tamte czasy i grę z moimi kolegami z klasy.
                     </p>
                 </div>
                 <div class="section-article__images">
@@ -59,52 +58,47 @@
                 <h1>Nida Pińczów</h1>
                 <div class="section-article__text">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum, nunc nec condimentum posuere, 
-                        velit leo suscipit felis, ac vehicula massa lacus eget tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec placerat, erat semper feugiat venenatis, dui orci tempus ligula, eleifend dictum sem leo eu felis. In vitae justo nec mi laoreet aliquet. Praesent vel tincidunt libero, in pellentesque mi. Nunc sagittis, arcu nec gravida 
-                        gravida, orci eros interdum justo, ac accumsan leo
-                        neque et elit. Mauris viverra rhoncus ligula eget
-                        molestie. Donec eu lobortis ligula. Aliquam in
-                        hendrerit mauris, a aliquet urna. Cras nunc 
-                        turpis, tincidunt sed ultricies ut, pharetra 
-                        ac leo. Nulla ac magna faucibus, pharetra lorem 
-                        id, tempus arcu. Donec laoreet, tellus ut 
-                        bibendum molestie, sem dui bibendum tortor, sed 
-                        eleifend nisi est sit amet lacus. Aenean eget
-                        metus arcu. Suspendisse potenti. Suspendisse 
-                        turpis mauris, bibendum eget mattis quis, 
-                        finibus vitae enim. Mauris vel mauris ut metus
-                        dapibus bibendum.
+                        Obecnie gram w drużynie Nida Pińczów. Jest to 4 klasa rozgrywek.
+                        Mój rocznik obecnie gra w Świętokrzyskiej Lidze Juniorów Starszych i 
+                        zajmujemy 2 miejsce w grupie posiadając 11 punktów z bilansem bramkowym
+                        11-5. W klubie gram na pozycji skrzydłowego. Narazie nie dostaje dużo minut,
+                        niedawno zagrałem swój debiut w wyjściowym składzie. Wygraliśmy ten mecz 3:0 i
+                        jestem zadowolony z swojego występu, choć zawsze mogło być lepiej. Do drużyny 
+                        dołączyłem w wakacje zeszłego roku, jestem najnowszym zawodnikiem i muszę dużo
+                        nadrobić.
                     </p>
                 </div>
                 <div class="section-article__images">
-                    <img src="pilka-stadion.jpg" alt="Piłka na stadionie">
+                    <img src="nida-herb.png" alt="Hebr Nidy Pińczów">
+                    <img src="nida-sklad.jpg" alt="Drużyna przed meczem">
                 </div>
             </div>
             <div class="section-article">
-                <h1>Wszystkie osiagnięcia</h1>
+                <h1>FC Barcelona</h1>
                 <div class="section-article__text">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum, nunc nec condimentum posuere, 
-                        velit leo suscipit felis, ac vehicula massa lacus eget tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec placerat, erat semper feugiat venenatis, dui orci tempus ligula, eleifend dictum sem leo eu felis. In vitae justo nec mi laoreet aliquet. Praesent vel tincidunt libero, in pellentesque mi. Nunc sagittis, arcu nec gravida 
-                        gravida, orci eros interdum justo, ac accumsan leo
-                        neque et elit. Mauris viverra rhoncus ligula eget
-                        molestie. Donec eu lobortis ligula. Aliquam in
-                        hendrerit mauris, a aliquet urna. Cras nunc 
-                        turpis, tincidunt sed ultricies ut, pharetra 
-                        ac leo. Nulla ac magna faucibus, pharetra lorem 
-                        id, tempus arcu. Donec laoreet, tellus ut 
-                        bibendum molestie, sem dui bibendum tortor, sed 
-                        eleifend nisi est sit amet lacus. Aenean eget
-                        metus arcu. Suspendisse potenti. Suspendisse 
-                        turpis mauris, bibendum eget mattis quis, 
-                        finibus vitae enim. Mauris vel mauris ut metus
-                        dapibus bibendum.
+                        Moim ulubionym klubem jest FC Barcelona. Pierwszy raz zobaczyłem
+                        ten zespół podczas meczu ligowego przeciwko Realowi Madryt. Mecz zakończył
+                        sie wynikiem 2:2, a mi zaimponowała gra Leo Messiego, który stał się moim
+                        idolem. W tamtym czasie oglądałem mnóstwo meczy Barcelony. Niestety w następnych
+                        latach przyszły ciężkie czasy dla klubu. W 2013 roku Barcelona została zmiażdżona 
+                        w półfinale Ligi Mistrzów przez Bayern Monachium 7:0 w dwumeczu. Następny rok 
+                        należał do odwiecznych rywali Barcelony, czyli Realu Madryt. Królewscy wygrali
+                        Ligę Mistrzów po niesamowitym finale przeciwko Atletico Madryt.
+                        W lato tego roku rozgrywane były Mistrzostwa Świata, które według mnie
+                        były najlepszym turniejem jaki kiedykolwiek oglądałem. Świetny występ zanotował
+                        Leo Messi, który został zawodnikiem turnieju i doprowadził Argentynę do finału.
+                        Niestety tam uległ drużynie Niemiec. Następny sezon dla Barcelony był jednym z 
+                        najlepszych w historii. Do drużyny dołączył Neymar oraz Luis Suarez, którzy
+                        wraz z Messim tworzyli najlepsze trio w obecnym czasie. Nowy trener Luis Enrique 
+                        doprowadził drużynę do zdobycia pucharu Ligi Hiszpańskiej, Superpucharu Hiszpani oraz
+                        Ligi Mistrzów. Byłem wtedy bardzo szczęśliwy. Niestety od tamtej pory nie udało się
+                        powtórzyć tamtego wyczynu jednak dalej mocno kibicuje Barcelonie.
                     </p>
                 </div>
                 <div class="section-article__images">
-                    <img src="pilka-stadion.jpg" alt="Piłka na stadionie">
+                    <img src="barca-herb.jpg" alt="Herb FC BARCELONY">
+                    <img src="messi-puchar.jpg" alt="Messi trzymający puchar Ligi Mistrzów">
                 </div>
             </div>
         </section>
@@ -112,11 +106,9 @@
     </main>
     <footer>
         <div class="contact">
-            <h1> Kontakt </h1>
+            <h1> Autor </h1>
             <ul>
-                <li> <span> Email:  </span> contact@email.com </li>
-                <li> <span> Telefon:  </span> 594 125 340</li>
-                <li> <span> Adres:  </span> Warszawa ul. Szkolna 4 53-124</li>
+                <li>Stronę stworzył: Filip Blicharski</li>
             </ul>
         </div>
         <div class="social">
