Dodanie buttona powrot i funckje scrollto

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </div>
         <nav class="header-nav">
             <ul class="nav-menu">
-                <a href="" class="nav-menu__item"><li>Jak to się zaczęło</li></a>
-                <a href="" class="nav-menu__item"><li>Mój klub</li></a>
-                <a href="" class="nav-menu__item"><li>Osiągnięcia</li></a>
+                <button class="nav-menu__item" onclick="scrollToSection()"><li>Jak to się zaczęło</li></button>
+                <button class="nav-menu__item" onclick="scrollToSection2()"><li>Moja drużyna</li></button>
+                <button class="nav-menu__item" onclick="scrollToSection3()"><li>Ulubiony klub</li></button>
             </ul>
         </nav>
     </header>
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </section>
-
+        <button onclick="toTop()" class="back-button">Powrót</button>
     </main>
     <footer>
         <div class="contact">
